k8s/base/bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  labels:
    app: bff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - app
      containers:
        - name: bff
          image: mablinov2704/bff:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 500m
              memory: 384Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bff
  labels:
    app: bff
spec:
  selector:
    app: bff
  ports:
    - name: http
      port: 8080
      targetPort: 8080
